# sdaccel_memory_benchmark

./: CMakeLists.txt  ExecuteKernel.cpp  MemoryBenchmark.cpp  MemoryBenchmark.h.in  README  README.md  Synthesis.tcl.in  Testbench.cpp
host/: ExecuteKernel.cpp
include/: MemoryBenchmark.h.in
kernel/: MemoryBenchmark.cpp
script/: Synthesis.tcl.in
src/: ExecuteKernel.cpp
test/: Testbench.cpp
